article.css
*,
*::before,
*::after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html {
    font-size: 10px;
    background-color: white;
}

/***** HEADER *****/

header {
    width: 100%;
    height: 6rem;
    padding-top: 1.5rem;
    padding-left: 10%;
    background-color: rgb(238, 238, 238);
}

/***** TOP NAV *****/

#top-nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

#top-nav button {
    width: 75px;
    height: 25px;
}

#top-nav select {
    width: 100px;
    height: 30px;
    font-size: 15px;
}

#top-nav ul {
    display: flex;
    width: 100%;
}

#top-nav li {
    list-style: none;
    font-size: 2rem;
    text-align: center;
}

#top-nav li a {
    text-decoration: none;
    color: black;
}

/***** MAIN *****/

body {
    margin: 0;
    padding: 0;
}

main {
    display: flex;
}

/***** SIDE NAV *****/

#side-nav {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    width: 12%;
    background-color: rgb(102, 102, 102);
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    z-index: 99;
    padding-top: 100px;
}

#side-nav ul li {
    list-style: none;
    margin: 2rem 0;
    height: 3rem;
}

#side-nav ul li:hover {
    background-color: yellow;
} 

#side-nav ul li a {
    font-size: 2rem;
    text-decoration: none;
    color: #ffffff;
}

/***** ACESSABILITY ASIDE *****/

#access-btns {
    width: 10%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#access-btns select {
    margin-top: 1rem;
}

#text-to-speech-btn {
    height: 100px;
    width: 100px;
}

#text-to-speech-btn img {
    height: 80px;
    width: 80px;
}

/***** CONTENT SECTION *****/

#content {
    width: 85%;
    height: 100vh;
    padding: 6rem;
    padding-top: 2rem;
    padding-left: 15%;
    overflow-y: scroll;
    overflow-x: hidden;
    scroll-behavior: smooth;
}

#content h2 {
    font-size: 8rem;
}

#content p {
    font-size: 2rem;
    padding: 1.5rem 0.5rem;
}

/***** FONTS AND HEADERS *****/

h3 {
    font-size: 4rem;
}

h4 {
    font-size: 3rem;
}

h5 {
    font-size: 1.2rem;
}

a, a:visted, a:hover, a:active {
    color: inherit;
}

span {
    background-color: yellow;
    text-decoration: underline dotted;
}

/***** ETC *****/

.hidden {
    display: none;
}

